--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "@emotion/styled": "^11.11.0",
     "@types/jest": "^29.5.2",
     "@types/node": "^20.3.1",
-    "framer-motion": "^10.12.16",
+    "aos": "^2.3.4",
+    "framer-motion": "^10.12.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.14.1"
