--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@emotion/styled": "^11.11.0",
     "@types/jest": "^29.5.2",
     "@types/node": "^20.3.1",
+    "aws-amplify": "^5.3.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-flickity-component": "^4.0.6",
