--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@formspree/react": "^2.5.0",
     "@types/jest": "^29.5.2",
     "@types/node": "^20.3.1",
     "aws-amplify": "^5.3.6",
+    "axios": "^0.19.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-flickity-component": "^4.0.6",
